--- a/cronograma_springboot/src/main/resources/application.properties
+++ b/cronograma_springboot/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=ejemplo
-spring.sql.init.enabled=false
+spring.datasource.url=jdbc:postgresql://10.128.0.86:5432/your_database_name
+spring.datasource.username=postgres_user
+spring.datasource.password=password123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
