--- a/manejador_estudiantes/requirements.txt
+++ b/manejador_estudiantes/requirements.txt
@@ -2,5 +2,8 @@ cryptography==2.8
 Django==3.0.4
 psycopg2-binary==2.8.4
 PyJWT==1.7.1
+pymongo==3.7.2
 python-dotenv==0.10.1
 social-auth-app-django==3.1.0
+pytz==2018.7
+djangorestframework==3.9.0
